compiler/src/snapshot_tests/grammar/errors/hex_overflow.tapir
var x = 0xFFFFFFFF;
var y = 0x100000000;
